--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ Cookbooks
 .project
 .secret.rvmrc
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+spec/dummy/db/*.sqlite3
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/dummy/.sass-cache
