--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ db/development_structure.sql
 coverage
 *.tmproj
 .DS_Store
-public/uploads/*chromedriver.log
-public/uploads/
 chromedriver.log
 .use_capybara_webkit
 config/locales/.wti
@@ -28,3 +26,4 @@ spec/dummy/db/*.sqlite3
 spec/dummy/log/*.log
 spec/dummy/tmp/
 spec/dummy/.sass-cache
+spec/dummy/public/uploads
