--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .bundle
 db/*.sqlite3
 log/*.log
-tmp/**/*
+tmp
 db/seeds/my-seeds-local.rb
 db/seeds/my-seeds-heroku.rb
 db/development_structure.sql
